<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/authorIV"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/author" />

    <TextView
        android:id="@+id/appNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintEnd_toEndOf="@+id/authorIV"
        app:layout_constraintStart_toStartOf="@+id/authorIV"
        app:layout_constraintTop_toBottomOf="@+id/authorIV" />

    <TextView
        android:id="@+id/aboutAuthorTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/about_author"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintEnd_toEndOf="@+id/appNameTV"
        app:layout_constraintStart_toStartOf="@+id/appNameTV"
        app:layout_constraintTop_toBottomOf="@+id/appNameTV" />

    <TextView
        android:id="@+id/contactMeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/contact_me"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintEnd_toEndOf="@+id/aboutAuthorTV"
        app:layout_constraintStart_toStartOf="@+id/aboutAuthorTV"
        app:layout_constraintTop_toBottomOf="@+id/aboutAuthorTV" />

    <TextView
        android:id="@+id/emailTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autoLink="email|web"
        android:text="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorLink="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/contactMeTitle"
        app:layout_constraintStart_toStartOf="@+id/contactMeTitle"
        app:layout_constraintTop_toBottomOf="@+id/contactMeTitle" />
</android.support.constraint.ConstraintLayout>