<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_photo_gallery_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ProgressBar
        android:id="@+id/fragment_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <RelativeLayout
        android:id="@+id/disconnected_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <ImageView
            android:id="@+id/disconnected_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_offline" />

        <TextView
            android:id="@+id/disconnected_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/disconnected_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/disconnected_title_text"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/disconnected_subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/disconnected_title_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/disconnected_subtitle_text"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#A2AAB0" />

        <Button
            android:id="@+id/disconnected_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/disconnected_subtitle_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/disconnected_button_text" />

    </RelativeLayout>

</RelativeLayout>